--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -3274,11 +3274,28 @@
     "plt.title('Confusion Matrix')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c8c9f66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate shap values\n",
+    "import shap\n",
+    "explainer = shap.Explainer(model)\n",
+    "X_test_subset = X_test.sample(100, random_state=41)\n",
+    "shap_values = explainer(X_test_subset)\n",
+    "shap.summary_plot(shap_values, X_test_subset, plot_type=\"bar\", feature_names=X.columns)\n",
+    "shap.summary_plot(shap_values, X_test_subset, feature_names=X.columns)\n",
+    "shap.initjs()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bigdata",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -3292,7 +3309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
